third_party/rust/pin-project/tests/ui/cfg/packed_sneaky-span-issue-2.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
 --> tests/ui/cfg/packed_sneaky-span-issue-2.rs:8:1
  |
8 | #[hidden_repr(packed)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `hidden_repr` (in Nightly builds, run with -Z macro-backtrace for more info)
